# kraban

./: .gitignore  Cargo.toml  README.md  default-config.toml  flake.nix  publish.sh  result  rustfmt.toml
.direnv/: flake-profile-4-link
kraban/: Cargo.toml
kraban-config/: Cargo.toml
kraban-config/src/: default-config.toml  default.rs  lib.rs
kraban-lib/: Cargo.toml
kraban-lib/src/: date.rs  dir.rs  iter.rs  lib.rs  wrapping_usize.rs
kraban-state/: Cargo.toml
kraban-state/src/: defaultmap.rs  difficulty.rs  due_task.rs  lib.rs  migration.rs  priority.rs  project.rs  sorted_vec.rs  task.rs
kraban-ui/: Cargo.toml
kraban-ui/src/: action.rs  component.rs  context.rs  due_tasks.rs  keyhints.rs  lib.rs  list.rs  main_view.rs  projects.rs  render.rs  table.rs  task.rs  utils.rs  view.rs  widgets.rs
kraban-ui/src/main_view/: component.rs  due_tasks.rs  projects.rs  view.rs
kraban-ui/src/prompt/: delete.rs  difficulty.rs  due_date.rs  enum_prompt.rs  input.rs  mod.rs  move_to_column.rs  priority.rs
kraban-ui/src/prompt/enum_prompt/: difficulty.rs  priority.rs  query.rs
kraban-ui/src/task/: column.rs  component.rs  mod.rs  tab.rs  view.rs
kraban-ui/src/task/column/: component.rs  mod.rs  query.rs  render.rs
kraban-ui/src/task/tab/: component.rs
kraban/src/: app.rs  cli.rs  main.rs
src/: app.rs  cli.rs  main.rs
src/app/: config.rs  state.rs  ui.rs
src/app/state/: defaultmap.rs  migration.rs  project.rs  sorted_vec.rs  task.rs
src/app/ui/: component.rs  keyhints.rs  list.rs  project.rs  task.rs  widgets.rs
src/app/ui/prompt/: change_priority.rs  delete.rs  due_date.rs  enum_prompt.rs  input.rs  mod.rs  move_to_column.rs
src/app/ui/task/: column.rs  component.rs  tab.rs  view.rs
