[package]
name = "kraban"
version = "0.3.0"
authors = ["Tatesa Uradnik <taduradnik@proton.me>"]
description = "A rust kanban board tui"
license = "MIT"
edition = "2024"
homepage = "https://github.com/TadoTheMiner/kraban"
repository = "https://github.com/TadoTheMiner/kraban"
readme = "README.md"

[dependencies]
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = ["macros", "serde", "unstable-rendered-line-info", "widget-calendar"] }
color-eyre = "0.6.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dirs = "6.0.0"
tap = "1.0.1"
clap = { version = "4.5.34", features = ["cargo", "env"] }
cli-log = "2.1.0"
strum = "0.27.1"
strum_macros = "0.27.1"
tui-textarea = "0.7.0"
derivative = "2.2.0"
figment = { version = "0.10.19", features = ["toml"] }
