[workspace]
resolver = "2"
members = ["kraban", "kraban-ui", "kraban-state", "kraban-config", "kraban-lib"]
default-members = ["kraban"]

[workspace.package]
version = "0.4.4"
authors = ["Tatesa Uradnik <taduradnik@proton.me>"]
description = "A rust kanban board tui"
license = "MIT"
edition = "2024"
homepage = "https://github.com/TadoTheMiner/kraban"
repository = "https://github.com/TadoTheMiner/kraban"
readme = "./README.md"
categories = ["command-line-utilities"]
keywords = ["tui", "kanban", "tasks", "ratatui", "terminal"]

[workspace.dependencies]
crossterm = "0.28.1"
ratatui = { version = "0.29.0", features = [
  "macros",
  "serde",
  "unstable-rendered-line-info",
  "widget-calendar",
] }
color-eyre = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
tap = "1.0.1"
cli-log = "2.1.0"
strum = "0.27.1"
strum_macros = "0.27.1"
time = { version = "0.3.41", features = ["serde"] }
chrono = { version = "0.4.40", features = ["now", "serde"] }
kraban-ui = {path = "./kraban-ui", version = "0.4.4"}
kraban-state = {path = "./kraban-state", version = "0.4.4"}
kraban-config = {path = "./kraban-config", version = "0.4.4"}
kraban-lib = {path = "./kraban-lib", version = "0.4.4"}
