[workspace]
resolver = "2"
members = ["kraban", "kraban-ui", "kraban-state", "kraban-config", "kraban-lib"]
default-members = ["kraban"]

[workspace.package]
version = "0.5.6"
authors = ["Tatesa Uradnik <taduradnik@proton.me>"]
description = "A rust kanban board tui"
license = "MIT"
edition = "2024"
homepage = "https://github.com/TadoTheMiner/kraban"
repository = "https://github.com/TadoTheMiner/kraban"
readme = "./README.md"
categories = ["command-line-utilities"]
keywords = ["tui", "kanban", "tasks", "ratatui", "terminal"]

[workspace.dependencies]
ratatui = { version = "0.29", features = [
  "macros",
  "serde",
  "unstable-rendered-line-info",
  "widget-calendar",
] }
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
cli-log = "2.1"
strum = "0.27"
strum_macros = "0.27"
time = { version = "0.3", features = ["serde", "local-offset"] }
chrono = { version = "0.4", features = ["now", "serde"] }
kraban-ui = {path = "./kraban-ui", version = "0.5.6"}
kraban-state = {path = "./kraban-state", version = "0.5.6"}
kraban-config = {path = "./kraban-config", version = "0.5.6"}
kraban-lib = {path = "./kraban-lib", version = "0.5.6"}
clap = { version = "4.5", features = ["cargo", "derive"] }
tui-textarea = "0.7"
enum_dispatch = "0.3"
dirs = "6.0"
serde_json = "1.0"
derivative = "2.2"
figment = { version = "0.10", features = ["toml"] }
itertools = "0.14"
arrayvec = "0.7"
serde_with = "3.12"
hashbrown = { version = "0.15", features = ["serde"] }
