[package]
name = "kraban-config"
description = "Configuration for kraban"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
figment.workspace = true
kraban-lib.workspace = true
color-eyre.workspace = true
ratatui.workspace = true
serde.workspace = true
