[package]
name = "kraban-lib"
description = "Items shared between components of the kraban app"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
dirs.workspace = true
time.workspace = true
chrono.workspace = true
color-eyre.workspace = true
strum_macros.workspace = true
strum.workspace = true
cli-log.workspace = true
