[package]
name = "kraban-state"
description = "State management for kraban"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde_json.workspace = true 
derivative.workspace = true 
kraban-lib.workspace = true
kraban-config.workspace = true
cli-log.workspace = true
color-eyre.workspace = true
serde.workspace = true
tap.workspace = true
strum_macros.workspace = true
strum.workspace = true
time.workspace = true
chrono.workspace = true
ratatui.workspace = true
