[package]
name = "kraban-ui"
description = "Kraban's user interface"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tui-textarea = "0.7.0"
enum_dispatch = "0.3.13"
kraban-state.workspace = true
kraban-config.workspace = true
kraban-lib.workspace = true
cli-log.workspace = true
ratatui.workspace = true
tap.workspace = true
crossterm.workspace = true
strum_macros.workspace = true
strum.workspace = true
chrono.workspace = true
time.workspace = true
