[package]
name = "kraban-ui"
description = "Kraban's user interface"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
tui-textarea.workspace = true
enum_dispatch.workspace = true
kraban-state.workspace = true
kraban-config.workspace = true
kraban-lib.workspace = true
cli-log.workspace = true
ratatui.workspace = true
strum_macros.workspace = true
strum.workspace = true
chrono.workspace = true
time.workspace = true
itertools.workspace = true
arrayvec.workspace = true
derivative.workspace = true
