[package]
name = "kraban"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap = { version = "4.5.34", features = ["cargo", "env"] }
kraban-ui.workspace = true
kraban-state.workspace = true
kraban-config.workspace = true
cli-log.workspace = true
color-eyre.workspace = true
crossterm.workspace = true
ratatui.workspace = true
