[package]
name = "kraban"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap.workspace = true
kraban-ui.workspace = true
kraban-state.workspace = true
kraban-config.workspace = true
cli-log.workspace = true
color-eyre.workspace = true
ratatui.workspace = true

